--- a/css/profil.css
+++ b/css/profil.css
@@ -2,8 +2,9 @@
 main>.content>img
 {
     display: block;
-    border: .7ex solid #c3e3c3;
-    border-radius: 50%;
+    border: .7ex solid var(--primary-lighten2);
+    /*border-radius: 50%;*/
+    box-shadow: .25em .25em var(--shadow);
     align-self: center;
     justify-self: center;
     margin-top: 2em;
