--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,4 @@
+@import url(/css/dunedain-common.css);
 @import url(/css/dunedain-dark.css);
 @import url(/css/dunedain-light.css);
 
@@ -15,8 +16,8 @@ body
 {
     background-color: var(--background);
     color: var(--text-color);
-    font-family: "Source Sans Pro", sans-serif;
-    font-size: 14pt;
+    font-family: var(--body-font);
+    font-size: var(--body-font-size);
     line-height: 2em;
     width: 100%;
     height: 100vh;
@@ -77,8 +78,8 @@ ol
 
 li
 {
-    padding-top: .5em;
-    padding-bottom: .5em;
+    /*padding-top: .5em;*/
+    /*padding-bottom: .5em;*/
 }
 
 ol>li
@@ -117,7 +118,7 @@ blockquote
 
 .abstract
 {
-    font-size: 12pt;
+    font-size: var(--small-font-size);
 }
 
 table
@@ -248,7 +249,7 @@ pre, code, kbd
     font-family: 'PxPlus IBM VGA8 for Powerline';
     line-height: 1.1em;
     background-color: var(--code-background);
-    border-radius: .5ex;
+    /*border-radius: .5ex;*/
     color: var(--code-color);
 }
 
@@ -276,7 +277,7 @@ kbd
     background-color: var(--kbd-background);
     color: var(--kbd-color);
     font-family: var(--kbd-font);
-    font-size: 12pt;
+    font-size: var(--small-font-size);
     padding: .2ex .7ex;
     border: .3ex solid var(--kbd-border-color);
     border-bottom-width: .5ex;
@@ -303,6 +304,11 @@ header>.content
 {
     background: var(--header-background);
     color: var(--header-color);
+}
+
+main>.content>header
+{
+    color: var(--header-alt-color);
 }
 
 header
@@ -422,7 +428,7 @@ figure
 figure>figcaption
 {
     display: block;
-    font-size: 10pt;
+    font-size: var(--tiny-font-size);
     line-height: 1.2em;
     text-align: center;
     padding-top: .5em;
@@ -436,7 +442,7 @@ figure>a.image>img
     display: block;
     background-color: var(--figure-image-default-bg);
     max-width: 100%;
-    border-radius: 1ex;
+    /*border-radius: 1ex;*/
     margin-left: auto;
     margin-right: auto;
 }
@@ -554,7 +560,7 @@ footer>.bottom-text>.content
 {
     padding-left: 2rem;
     padding-right: 2rem;
-    font-size: 10pt;
+    font-size: var(--small-font-size);
     word-break: normal;
 }
 
@@ -676,7 +682,7 @@ footer>.bottom-text>.content
     right: 0;
     background-color: rgba(255,255,255,.1);
     opacity: 0;
-    border-radius: 1ex;
+    /*border-radius: 1ex;*/
     will-change: opacity;
 }
 
@@ -828,7 +834,7 @@ a.timestamp:hover
 .heading-link,
 .heading-link>a
 {
-    font-size: 12pt;
+    font-size: var(--small-font-size);
 }
 
 .heading-link>a
@@ -852,6 +858,7 @@ a.timestamp
 
 .heading-link.back-arrow
 {
+    position: relative;
     padding-left: 2rem;
     padding-right: 2rem;
     padding-bottom: 1rem;
@@ -859,11 +866,18 @@ a.timestamp
 
 .heading-link.back-arrow::before
 {
-    content: '⯇';
+    content: ' ';
     display: block;
     position: absolute;
-    margin-left: -1em;
-    width: 1em;
+    width: 1rem;
+    font-size: var(--body-font-size);
+    border-top: .5rem solid transparent;
+    border-bottom: .5rem solid transparent;
+    border-left: .5rem solid transparent;
+    border-right: .5rem solid var(--text-color);
+    height: 0;
+    margin-top: .6rem;
+    left: 0;
 }
 
 a.timestamp>svg
@@ -934,7 +948,7 @@ details[open]>div
     text-transform: uppercase;
     letter-spacing: .3ex;
     padding: .5em 1em;
-    border-radius: 0;
+    /*border-radius: 0;*/
     box-shadow: .25em .25em var(--shadow);
     transition: box-shadow .1s ease, transform .1s ease;
     will-change: box-shadow, transform;
@@ -956,7 +970,7 @@ details[open]>div
     right: 0;
     background-color: rgba(255,255,255,.3);
     opacity: 0;
-    border-radius: 1ex;
+    /*border-radius: 1ex;*/
     will-change: opacity;
 }
 
