--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -17,7 +17,7 @@
 .dates
 {
     font-family: var(--date-font);
-    font-size: 12pt;
+    font-size: var(--body-font-size);
     /*font-weight: bold;*/
     padding: 0 2rem;
 }
@@ -25,8 +25,11 @@
 .image
 {
     background-color: var(--background);
-    border: .7ex solid var(--primary-lighten2);
-    box-shadow: .25em .25em var(--shadow);
+    border: var(--image-border-width) solid var(--image-border);
+    box-shadow: 
+        inset 0 0 0 .1ex var(--image-border-outer),
+        inset 0 0 0 var(--image-border-width) var(--image-border-inner),
+        .25em .25em var(--shadow);
     width: 20em;
     min-width: 20em;
     height: 20em;
@@ -41,6 +44,8 @@
     height: 20em;
     min-height: 20em;
     min-width: 20em;
+    visibility: hidden;
+    /*clip-path: polygon(0 0, 100% 100%);*/
 }
 
 .description
@@ -55,17 +60,17 @@
 
 .actions>.inactive-link 
 {
-    display: inline;
+    display: inline-flex;
     background-color: var(--dim-text-background);
     color: var(--dim-text-color);
     position: relative;
     cursor: not-allowed;
-    padding: .6em 1em;
+    padding: 0 1em;
     margin: 0 .5em 0 0;
     text-decoration: none;
     text-transform: uppercase;
     letter-spacing: .2ex;
-    font-size: 12pt;
+    font-size: var(--body-font-size);
 }
 
 .actions>a
@@ -79,8 +84,8 @@
     text-decoration: none;
     text-transform: uppercase;
     letter-spacing: .2ex;
-    font-size: 12pt;
-    box-shadow: .25em .25em #000;
+    font-size: var(--body-font-size);
+    box-shadow: .25em .25em var(--shadow);
     transition: box-shadow .1s ease, transform .1s ease;
     will-change: box-shadow, transform;
 }
